# Stock_Berman

./: README.md  pyproject.toml
src/: main.py
src/financial_analyst_crew/: crew.py
src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
